Added cors to server. Fixed routing in client

--- a/crud-web-application/src/app/app.component.html
+++ b/crud-web-application/src/app/app.component.html
@@ -23,8 +23,5 @@
   </div>
 </nav>
 <div class="container">
-  <router-outlet hidden>
-    <app-insert-page></app-insert-page>
-    <app-get-page></app-get-page>
-  </router-outlet>
+  <router-outlet></router-outlet>
 </div>
